; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_subr.c_vn_attribute_prepare.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_subr.c_vn_attribute_prepare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.vnode_attr = type { i32, i64, i32*, i32* }

@VA_NOINHERIT = common dso_local global i32 0, align 4
@va_acl = common dso_local global i32 0, align 4
@VDIR = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [47 x i8] c"%p    CREATE - error %d processing inheritance\00", align 1
@VA_NOAUTH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vn_attribute_prepare(%struct.TYPE_6__* %0, %struct.vnode_attr* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_6__*, align 8
  %7 = alloca %struct.vnode_attr*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %6, align 8
  store %struct.vnode_attr* %1, %struct.vnode_attr** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32* null, i32** %10, align 8
  store i32* null, i32** %11, align 8
  %13 = load %struct.vnode_attr*, %struct.vnode_attr** %7, align 8
  %14 = getelementptr inbounds %struct.vnode_attr, %struct.vnode_attr* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = load i32, i32* @VA_NOINHERIT, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %69, label %19

19:                                               ; preds = %4
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %21 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i64 @vfs_extendedsecurity(i32 %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %69

25:                                               ; preds = %19
  %26 = load %struct.vnode_attr*, %struct.vnode_attr** %7, align 8
  %27 = load i32, i32* @va_acl, align 4
  %28 = call i64 @VATTR_IS_ACTIVE(%struct.vnode_attr* %26, i32 %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %34

30:                                               ; preds = %25
  %31 = load %struct.vnode_attr*, %struct.vnode_attr** %7, align 8
  %32 = getelementptr inbounds %struct.vnode_attr, %struct.vnode_attr* %31, i32 0, i32 3
  %33 = load i32*, i32** %32, align 8
  store i32* %33, i32** %11, align 8
  br label %34

34:                                               ; preds = %30, %25
  %35 = load %struct.vnode_attr*, %struct.vnode_attr** %7, align 8
  %36 = getelementptr inbounds %struct.vnode_attr, %struct.vnode_attr* %35, i32 0, i32 3
  store i32* null, i32** %36, align 8
  %37 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %38 = load i32*, i32** %11, align 8
  %39 = load %struct.vnode_attr*, %struct.vnode_attr** %7, align 8
  %40 = getelementptr inbounds %struct.vnode_attr, %struct.vnode_attr* %39, i32 0, i32 1
  %41 = load i64, i64* %40, align 8
  %42 = load i64, i64* @VDIR, align 8
  %43 = icmp eq i64 %41, %42
  %44 = zext i1 %43 to i32
  %45 = load i32, i32* %9, align 4
  %46 = call i32 @kauth_acl_inherit(%struct.TYPE_6__* %37, i32* %38, i32** %10, i32 %44, i32 %45)
  store i32 %46, i32* %12, align 4
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %48, label %53

48:                                               ; preds = %34
  %49 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %50 = load i32, i32* %12, align 4
  %51 = call i32 @KAUTH_DEBUG(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0), %struct.TYPE_6__* %49, i32 %50)
  %52 = load i32, i32* %12, align 4
  store i32 %52, i32* %5, align 4
  br label %89

53:                                               ; preds = %34
  %54 = load i32*, i32** %10, align 8
  %55 = icmp eq i32* %54, null
  br i1 %55, label %56, label %60

56:                                               ; preds = %53
  %57 = load %struct.vnode_attr*, %struct.vnode_attr** %7, align 8
  %58 = load i32, i32* @va_acl, align 4
  %59 = call i32 @VATTR_CLEAR_ACTIVE(%struct.vnode_attr* %57, i32 %58)
  br label %68

60:                                               ; preds = %53
  %61 = load i32*, i32** %11, align 8
  %62 = load %struct.vnode_attr*, %struct.vnode_attr** %7, align 8
  %63 = getelementptr inbounds %struct.vnode_attr, %struct.vnode_attr* %62, i32 0, i32 2
  store i32* %61, i32** %63, align 8
  %64 = load %struct.vnode_attr*, %struct.vnode_attr** %7, align 8
  %65 = load i32, i32* @va_acl, align 4
  %66 = load i32*, i32** %10, align 8
  %67 = call i32 @VATTR_SET(%struct.vnode_attr* %64, i32 %65, i32* %66)
  br label %68

68:                                               ; preds = %60, %56
  br label %69

69:                                               ; preds = %68, %19, %4
  %70 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %71 = load %struct.vnode_attr*, %struct.vnode_attr** %7, align 8
  %72 = load %struct.vnode_attr*, %struct.vnode_attr** %7, align 8
  %73 = getelementptr inbounds %struct.vnode_attr, %struct.vnode_attr* %72, i32 0, i32 0
  %74 = load i32, i32* %73, align 8
  %75 = load i32, i32* @VA_NOAUTH, align 4
  %76 = and i32 %74, %75
  %77 = load i32*, i32** %8, align 8
  %78 = load i32, i32* %9, align 4
  %79 = call i32 @vnode_authattr_new_internal(%struct.TYPE_6__* %70, %struct.vnode_attr* %71, i32 %76, i32* %77, i32 %78)
  store i32 %79, i32* %12, align 4
  %80 = load i32, i32* %12, align 4
  %81 = icmp ne i32 %80, 0
  br i1 %81, label %82, label %87

82:                                               ; preds = %69
  %83 = load %struct.vnode_attr*, %struct.vnode_attr** %7, align 8
  %84 = load i32*, i32** %8, align 8
  %85 = load i32, i32* %84, align 4
  %86 = call i32 @vn_attribute_cleanup(%struct.vnode_attr* %83, i32 %85)
  br label %87

87:                                               ; preds = %82, %69
  %88 = load i32, i32* %12, align 4
  store i32 %88, i32* %5, align 4
  br label %89

89:                                               ; preds = %87, %48
  %90 = load i32, i32* %5, align 4
  ret i32 %90
}

declare dso_local i64 @vfs_extendedsecurity(i32) #1

declare dso_local i64 @VATTR_IS_ACTIVE(%struct.vnode_attr*, i32) #1

declare dso_local i32 @kauth_acl_inherit(%struct.TYPE_6__*, i32*, i32**, i32, i32) #1

declare dso_local i32 @KAUTH_DEBUG(i8*, %struct.TYPE_6__*, i32) #1

declare dso_local i32 @VATTR_CLEAR_ACTIVE(%struct.vnode_attr*, i32) #1

declare dso_local i32 @VATTR_SET(%struct.vnode_attr*, i32, i32*) #1

declare dso_local i32 @vnode_authattr_new_internal(%struct.TYPE_6__*, %struct.vnode_attr*, i32, i32*, i32) #1

declare dso_local i32 @vn_attribute_cleanup(%struct.vnode_attr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
